[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/ui_elements/CmdWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/code_knots/CodeKnoxLogic.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/code_knots/CodeKnoxEncrypt.gd" type="Script" id=3]

[node name="CodeKnoxEnchrypt" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -116.0
margin_right = 151.0
margin_bottom = 116.0
script = ExtResource( 3 )
title = "CodeKnox Encrypt"
text_content = "Order Summary:


1x VirtUnlock-Code
1x VirtualDampHandShake



Accepted payment methods:
 StaySmall, YMCC, SmithCoin."

[node name="Margin" parent="." index="0"]
margin_right = 302.0
margin_bottom = 232.0

[node name="ContentVBox" parent="Margin" index="0"]
margin_right = 298.0
margin_bottom = 228.0

[node name="TitleHBox" parent="Margin/ContentVBox" index="0"]
margin_right = 294.0

[node name="TitleMargin" parent="Margin/ContentVBox/TitleHBox" index="1"]
margin_right = 263.0

[node name="TitleLabel" parent="Margin/ContentVBox/TitleHBox/TitleMargin" index="0"]
margin_right = 259.0
text = "CodeKnox Encrypt"

[node name="CloseButton" parent="Margin/ContentVBox/TitleHBox" index="2"]
margin_left = 267.0
margin_right = 294.0

[node name="ContentControl" parent="Margin/ContentVBox" index="1"]
margin_right = 294.0
margin_bottom = 226.0

[node name="ContentLabel" parent="Margin/ContentVBox/ContentControl/ContentMargin" index="0"]
margin_right = 284.0
margin_bottom = 180.0
text = "Order Summary:


1x VirtUnlock-Code
1x VirtualDampHandShake



Accepted payment methods:
 StaySmall, YMCC, SmithCoin."

[node name="CodeKnoxLogic" parent="." index="1" instance=ExtResource( 2 )]
